Fixed crash when starting the game